syntax = "proto3";

package onight.zjfae.afront.gensazj.v2;
option java_outer_classname="LoginIcons";
//Generated By BrewRobot:Wed Sep 06 14:53:46 CST 2017

message PBAPP_icons{
	//
	message Icons{
		string uuid = 1;	 //,uuid,Long,不校验,是,
		string iconsName = 2;	 //,图标名称,String,不校验,是,
		string iconsType = 3;	 //,图标类型,String,不校验,是,
		string iconsAddress = 4;	 //,图标地址,Long,不校验,是,
		string status = 5;	 //,状态,Long,不校验,是,
		string iconsLocation = 6;	 //,图标位置,Long,不校验,是,
		string keyword = 7;	 //,关键词,String,不校验,是,
		string iconsWeights = 8;	 //,图标权重,String,不校验,是,
		string remark = 9;	 //,备注,Long,不校验,是,
		string iconsPosition = 10;	 //,图标方位,Long,不校验,是,
		string iconsLink = 11;	 //,图标链接地址,Long,不校验,是,
		string linkKeywordName = 12;	 //,链接关键词名称,Long,不校验,是,
		string linkLocation = 13;	 //,链接位置,Long,不校验,是,
		string isShare = 14;	 //,是否分享,Long,不校验,是,
		string linkLoginFlag = 15;	 //,链接登录标识,Long,不校验,是,


	}


	repeated Icons iconsList = 1;


}

message Ret_PBAPP_icons{
	//

	string returnCode=1;	//报文头

	string returnMsg=2;	//报文头

	PBAPP_icons data=3;


}

message REQ_PBAPP_icons{
	//

	string iconsLocation = 1; //,图标位置，subscribeList 认购列表，transferList 转让列表,String,不校验,否,

	string iconsPosition = 2; //,图标具体方位，left 左侧，right 右侧，right_lower 右下,String,不校验,否,


}